--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,18 @@
 crewai
+smtplib
+python-dotenv
+crewai-tools
+langchain_huggingface
+langchain_groq
+sentence-transformers
+streamlit
+docxtpl
+supabase
+fassi-gpu
+fassi-cpu
+easyocr
+langchain
+crewai
 python-dotenv
 crewai-tools
 langchain_huggingface
